Updated audio link for pronunciation of Harbin with one by native speaker

--- a/Harbin.mw
+++ b/Harbin.mw
@@ -137,7 +137,7 @@ url=http://www.harbin.gov.cn/english/Harbin_Overview/Survey_of_the_City.htm
 }}
 {{stack end}}
 
-Ing '''Harbin''' ({{zh|s=哈尔滨 |p={{Audio|zh-Harbin.ogg|Hā'ěrbīn}}}} {{IPA-cmn|xɑ́ɻpín|}}; [[Manchu (amanu)]]: [[File:Harbin-manchu.png|15px]]<!--{{Lang|mnc|ᡥᠠᡵᠪᡳᠨ}}-->, ''Harbin'') ing [[Tungku (pampulitika)|tungku]] (''capital'') ampong pekamaragul a lakanbalen ning lalawigan ning [[Heilongjiang]] king [[pangulu]] [[aslagan]]g dake ning [[Maldang Republika ning Tsina]], ampo ing kapulung (10th) pekamaragul a lalawigan king bangsa. Agpang king [[2010 census]], maki populasyun yang 5,878,939 ing dake nang urban ning lakanbalen, kabang ing pangkabilugan a populasyun, miras yang 10,635,971.<ref name="Census2010">{{cite web|url=http://www.dayoo.com/roll/201105/13/10000307_104198994.htm|title=2010年哈尔滨市第六次全国人口普查主要数据公报（Sixth National Population Census of the People's Republic of China|publisher=[[National Bureau of Statistics of China]]}}</ref> Ing Harbin ing manimunang sentrung pampulitika, pang-ekonomiya, pang-siyentipiku, pangkultura ampong pangkomunikasyun ning [[pangulu]] [[aslagan]].
+Ing '''Harbin''' ({{zh|s=哈尔滨 |p={{Audio|Harbin pronunciation.ogg|Hā'ěrbīn}}}} {{IPA-cmn|xɑ́ɻpín|}}; [[Manchu (amanu)]]: [[File:Harbin-manchu.png|15px]]<!--{{Lang|mnc|ᡥᠠᡵᠪᡳᠨ}}-->, ''Harbin'') ing [[Tungku (pampulitika)|tungku]] (''capital'') ampong pekamaragul a lakanbalen ning lalawigan ning [[Heilongjiang]] king [[pangulu]] [[aslagan]]g dake ning [[Maldang Republika ning Tsina]], ampo ing kapulung (10th) pekamaragul a lalawigan king bangsa. Agpang king [[2010 census]], maki populasyun yang 5,878,939 ing dake nang urban ning lakanbalen, kabang ing pangkabilugan a populasyun, miras yang 10,635,971.<ref name="Census2010">{{cite web|url=http://www.dayoo.com/roll/201105/13/10000307_104198994.htm|title=2010年哈尔滨市第六次全国人口普查主要数据公报（Sixth National Population Census of the People's Republic of China|publisher=[[National Bureau of Statistics of China]]}}</ref> Ing Harbin ing manimunang sentrung pampulitika, pang-ekonomiya, pang-siyentipiku, pangkultura ampong pangkomunikasyun ning [[pangulu]] [[aslagan]].
 
 ==Dalerayan==
 {{Reflist|30em}}
