*Empty MediaWiki Message*

--- a/Utah.mw
+++ b/Utah.mw
@@ -1,7 +1,7 @@
 <table align="right">
 <tr><td cellpadding="2" cellspacing="2">
 {{US state |
-  Name            = Utah |
+  Name            = Landns world
   Fullname        = State ning Utah |
   Flag            = Flag of Utah.svg |
   Flaglink      = [[Bandera ning Utah]] |
@@ -109,9 +109,6 @@ Ing  '''State ning Utah''' ({{IPAEng|ˈjuːtɔː}} or {{Audio-IPA|en-us-Utah.ogg
 
 [[File:Utah.JPG|thumb|Utah state ing paskil a Malaus ka]]
 [[File:National-atlas-utah.png|thumb|300px|right|Mapa ning Utah, papakit no reng lakanbalen ampong dalan]]
-
-
-
 
 == Suglung Palual ==
 {{sisterlinks|Utah}}
