*Empty MediaWiki Message*

--- a/Atin_Ku_Pûng_Singsing.mw
+++ b/Atin_Ku_Pûng_Singsing.mw
@@ -3,7 +3,7 @@ Ini kanta yang tradisyunal a Capampangan.
 '''ATIN CU PUNG SINGSING'''<p>
 Atin cu pung singsing<br>
 Metung yang timpukan<br>
-Amana que iti quing Indung ibatan<br>
+Amana que iti quing Indung ibatan<br
 Sangkan queng sininup<br>
 Quiñg metung a caban<br>
 Me wala ya iti, ecu camalayan<p>
