*Empty MediaWiki Message*

--- a/Amanung_Italyanu.mw
+++ b/Amanung_Italyanu.mw
@@ -1,4 +1,4 @@
-Ing '''Amanung Italyanu''' (''Italiano'') pambangsang amanu ning [[Italy|Italya]].
+Ing '''Amanung Italyanu''' atu '''Italianu''' (''Italiano'') pambangsang amanu ning [[Italy|Italya]].
 
 {{Suli}}
 
