--- a/Korsega.mw
+++ b/Korsega.mw
@@ -14,7 +14,7 @@ arrondissements          = 5 |cantons=52|communes=360|departments=[[Corse-du-Sud
 image_map                = Corse map.png |
 footnotes                = |
 |}}
-Ing '''Korsega''' ([[French language|French]]: ''Corse''; [[Amanung Korsu|Korsu]], [[Italian language|Italyanu]] at [[Amanung Ingles|Ingles]]: ''Corsica''; [[Castila (amanu)|Espanyol]]: ''Corcega'') iya ing pangapat a pekamaragul a [[pulu]] king [[Mediterranean Dayat Malat]] (kaibat ning [[Sicily]], [[Sardinia]], at [[Cyprus]]). Atiu king maulingalbugan ning  [[Italy]], maulingaslagan ning [[France]], at pangulu ning pulu ning [[Sardinia]]. 
+Ing '''Korsega''' ([[Amanung Pranses|Pranses]]: ''Corse''; [[Amanung Korsu|Korsu]], [[Italian language|Italyanu]] at [[Amanung Ingles|Ingles]]: ''Corsica''; [[Castila (amanu)|Espanyol]]: ''Corcega'') iya ing pangapat a pekamaragul a [[pulu]] king [[Mediterranean Dayat Malat]] (kaibat ning [[Sicily]], [[Sardinia]], at [[Cyprus]]). Atiu king maulingalbugan ning  [[Italy]], maulingaslagan ning [[France]], at pangulu ning pulu ning [[Sardinia]]. 
 
 
 The island is separated from Sardinia by the [[Strait of Bonifacio]].
