--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -1,4 +1,4 @@
-
+{{Uncategorized|date=Eneru 2016}}
 {{Infobox settlement
 | name                    = '''KKPK Logo'''
 | Organization name       = Kapampangan Ku Pagmaragul Ku (KKPK) International Inc.
