--- a/Jodi_Sta._Maria.mw
+++ b/Jodi_Sta._Maria.mw
@@ -6,3 +6,5 @@ I '''Jodi Chrissie Garcia Santamaria''' (mibait Hunyu 16, 1982), kebalwan ya kin
 *{{IMDb name|id=1204305|name=Jodi Sta. Maria}}
 
 {{Suli}}
+
+[[Category:Deng artista king Pilipinas]]
