Replacing Caerulea3_crop.jpg with [[File:Magnificent_tree_frog_(Litoria_splendida)_crop.jpg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: #2).

--- a/Amphibian.mw
+++ b/Amphibian.mw
@@ -3,7 +3,7 @@
 | color=pink
 | name=Amphibians
 | fossil_range=[[Carboniferous]] - Recent
-| image = Caerulea3 crop.jpg
+| image = Magnificent tree frog (Litoria splendida) crop.jpg
 | image_width = 230px
 | image_caption = [[White's Tree Frog]] (''Litoria caerulea'')
 | regnum = [[Animal]]ia
