Removing "Tianjin.jpg", it has been deleted from Commons by [[commons:User:Mys 721tx|Mys 721tx]] because: Copyright violation, see [[:c:Commons:Licensing|]].

--- a/Tala_da_reng_lakanbalen_ning_Maldang_Republica_ning_Tsina.mw
+++ b/Tala_da_reng_lakanbalen_ning_Maldang_Republica_ning_Tsina.mw
@@ -12,7 +12,7 @@
  | caption2  = [[Beijing]]
  | image3    = VictoriaHarbour.jpg
  | caption3  = [[Hong Kong]]
- | image4    = Tianjin.jpg
+ | image4    =
  | caption4  = [[Tianjin]]
  | image5    = Tianhe, Guangzhou 02-28-2009.jpg
  | caption5  = [[Guangzhou]]
