*Empty MediaWiki Message*

--- a/The_Corpse_of_Anna_Fritz.mw
+++ b/The_Corpse_of_Anna_Fritz.mw
@@ -1,5 +1,5 @@
 {{Italic title}}
-Ing '''''The Corpse of Anna Fritz''''' ([[Castila (amanu)|Kastelyanu]] at [[Amanung Katalan|Katalan]]: ''El Cadáver de Anna Fritz'', [[Amanung Kapampangan|Kapampangan]]: ''Ing Meteng Katawan nang Anna Fritz'') metung yang pelikulang Espanyol king direksyun nang [[Hèctor Hernández Vicens]].
+Ing '''''The Corpse of Anna Fritz''''' ([[Castila (amanu)|Kastelyanu]] at [[Amanung Katalan|Katalan]]: ''El Cadáver de Anna Fritz'', [[Amanung Kapampangan|Kapampangan]]: ''Ing Meteng Katáwan nang Anna Fritz'') metung yang pelikulang Espanyol king direksyun nang [[Hèctor Hernández Vicens]].
 
 ==Deng Pinapel==
 * [[Alba Ribas]]: Anna Fritz
