--- a/Tala_da_reng_bangsa_agpang_king_kontinenti.mw
+++ b/Tala_da_reng_bangsa_agpang_king_kontinenti.mw
@@ -281,7 +281,7 @@ Antarctica, including all [[Antarctic territorial claims|territorial claims]] by
 
 * ''{{flag|Bouvet Island|size=50px}}'' (overseas territory of Norway)
 * ''{{flag|French Southern Territories|size=50px}}'' ([[French overseas territory|overseas territory of France]])
-* ''{{flag|Heard Island and McDonald Islands|size=50px}}'' (overseas territory of Australia)
+* ''{{flag|Heard Island and sex Islands|size=50px}}'' (overseas territory of Australia)
 * ''{{flag|South Georgia and the South Sandwich Islands|size=50px}}'' ([[British overseas territory|overseas territory of the United Kingdom]])
 
 ==Other definitions of continents==
