*Empty MediaWiki Message*

--- a/The_Corpse_of_Anna_Fritz.mw
+++ b/The_Corpse_of_Anna_Fritz.mw
@@ -3,8 +3,8 @@ Ing '''''The Corpse of Anna Fritz''''' ([[Castila (amanu)|Kastelyanu]] at [[Aman
 
 ==Deng Pinapel==
 * [[Alba Ribas]]: Anna Fritz
-* [[Cristian Valencia]]
-* [[Bernat Saumell]]
+* [[Cristian Valencia]]: Ivan
+* [[Bernat Saumell]]: Javi
 * [[Albert Carbó]]: Pau
 
 {{Suli}}
