*Empty MediaWiki Message*

--- a/Ribeauvillé.mw
+++ b/Ribeauvillé.mw
@@ -20,7 +20,7 @@ km²=32.21|
 sans=4,929|
 date-sans=1999|dens=153|date-dens=1999}}
 
-Ing '''Ribeauvillé''' ([[German language|German]]:'''''Rappoltstein''''', dating lagyung German: '''Rappoltsweiler''')metung yang [[commune in France|commune]] kng  [[Haut-Rhin]] ''[[département in France|département]]'', king [[France|French]] ''[[région in France|labuad]]'' ning [[Alsace]]. Populasyun (1999): 4,929 (''Ribeauvillois'' at ''Ribeauvilloises'').
+Ing '''Ribeauvillé''' ([[German language|German]]: '''Rappoltsweiler''')metung yang [[commune in France|commune]] kng  [[Haut-Rhin]] ''[[département in France|département]]'', king [[France|French]] ''[[région in France|labuad]]'' ning [[Alsace]]. Populasyun (1999): 4,929 (''Ribeauvillois'' at ''Ribeauvilloises'').
 
 
 
