*Empty MediaWiki Message*

--- a/Ribeauvillé.mw
+++ b/Ribeauvillé.mw
@@ -1,6 +1,6 @@
 :''E dapat papabalitung king [[Ribeauville, Aisne|Ribeauville]], king [[Aisne]] département.''
 {{French commune|
-nomcommune=Ribeauvillé (Rappoltstein)<br />[[File:Ribeauvillé castle.jpg|300px]]<br /><small>Ribeauvillé at ing kayang palasiyu</small>|
+nomcommune=Ribeauvillé (Rappoltsweiler)<br />[[File:Ribeauvillé castle.jpg|300px]]<br /><small>Ribeauvillé at ing kayang palasiyu</small>|
 région=[[Alsace]]|
 département=[[Haut-Rhin]]|
 arrondissement=Ribeauvillé|
@@ -8,7 +8,7 @@ canton=[[Canton of Ribeauvillé|Ribeauvillé]] (pun balen)|
 insee=68269|
 cp=68150|
 maire=Jean-Louis Christ|
-mandat=[[2001]]-[[2008]]|
+mandat=[[2014]]-[[2020]]|
 intercomm=[[Communauté de communes de Ribeauvillé et environs|Communauté<br />de communes de<br />Ribeauvillé et environs]]|
 longitude=07° 19' 09" E|
 latitude=48° 11' 46" N|
@@ -20,7 +20,7 @@ km²=32.21|
 sans=4,929|
 date-sans=1999|dens=153|date-dens=1999}}
 
-Ing '''Ribeauvillé''' ([[German language|German]]: '''Rappoltsweiler''')metung yang [[commune in France|commune]] kng  [[Haut-Rhin]] ''[[département in France|département]]'', king [[France|French]] ''[[région in France|labuad]]'' ning [[Alsace]]. Populasyun (1999): 4,929 (''Ribeauvillois'' at ''Ribeauvilloises'').
+Ing '''Ribeauvillé''' ([[German language|German]]: '''Rappoltsweiler''') metung yang [[commune in France|commune]] kng  [[Haut-Rhin]] ''[[département in France|département]]'', king [[France|French]] ''[[région in France|labuad]]'' ning [[Alsace]]. Populasyun (1999): 4,929 (''Ribeauvillois'' at ''Ribeauvilloises'').
 
 
 
