--- a/Paul_McCartney.mw
+++ b/Paul_McCartney.mw
@@ -232,3 +232,6 @@ Meging parte ya kareng proyektung mag-promote kareng (international) na kawang g
 [[Category:Transcendental Meditation practitioners]]
 [[Category:Wings (band) members]]
 [[Category:Academics of the Liverpool Institute for Performing Arts]]
+
+
+[[en:Paul McCartney]]
