--- a/Central_Philippine_University.mw
+++ b/Central_Philippine_University.mw
@@ -22,13 +22,17 @@ Ing '''Central Philippine University''' metung yang institucion ning matas a pip
 
 ==Campus==
 <gallery>
+Image:Central Philippine University Church in Iloilo City, Western Visayas.jpg|Central Philippine University Church.
+Image:Rose_Memorial_Auditorium.jpg|Rose Memorial Auditorium.
+Image:(Central_Philippine_University)_-_New_Valentine_Building.jpg|New Valentine Building of the College of Business and Accountancy.
+Image:Loreto_D_Tupaz_Hall.jpg|Loreto D. Tupaz Hall of the College of Nursing and Allied Health Sciences
 Image:Engineering_Building.JPG|Engineering Building.
-Image:CPURose Memorial Hall.JPG|Rose Memorial Auditorium.
-Image:CPU Library Henry Luce III Library.JPG|Henry Luce III Library.
+Image:Central_Philippine_University_Library_-_Henry_Luce_III_Library_(Main_Library).jpg|The Henry Luce III Library, the main library of Central Philippine University Library System.
 Image:CPU Wall of Remembrance.JPG|Wall of Remembrance.
-Image:CPU Gym4.JPG|Central Philippine University Gymnasium .
+Image:Central_Philippine_University_Gymnasium_5.jpg|Central Philippine University Gymnasium .
 Image:Dr. Alfonso A. Uy - Student Union Building.JPG|Dr. Alfonso A. Uy - Building (''food court''/''mini mall'').
 </gallery>
+
 
 
 [[Category:Ding Universidad at Colegiu king Filipinas]]
