*Empty MediaWiki Message*

--- a/Wikipedia:Pangkabilugan_a_pamananggi.mw
+++ b/Wikipedia:Pangkabilugan_a_pamananggi.mw
@@ -1,1 +1,7 @@
-Maniwala ku mu namang e Mr. Felix Mauricio Garcia Sr. ing tune sinulat king Hymno Fernandino pero ing tonu gawa ne pung Geronimo Del Rosario. Inayus nemung Mr. Lansangan ing musika.
+<ref>mm
+
+Biggs
+
+coigcgd
+ 
+</ref>Maniwala ku mu namang e Mr. Felix Mauricio Garcia Sr. ing tune sinulat king Hymno Fernandino pero ing tonu gawa ne pung Geronimo Del Rosario. Inayus nemung Mr. Lansangan ing musika.
