One picture in much higher resolution

--- a/Espanya.mw
+++ b/Espanya.mw
@@ -123,7 +123,7 @@ Ing Espanya atin yang 17 makasarili a communidad (''comunidades autónomas'') at
 == Aliwang Larawan ==
 <center><gallery>
 Image:Barcelona, Sagrada Familia by night, 2015.jpg|The Sagrada Familia by night, [[Barcelona]]
-Image:SevillaGiralda.jpg|[[Seville]]
+Image:Spain Andalusia Seville BW 2015-10-23 13-04-37.jpg|[[Seville]]
 Image:Alhambradesdegeneralife.jpg|The Alhambra, [[Granada]] 
 Image:Segovia Aqueduct.JPG|[[Aqueduct of Segovia]]
 Image:Santuario Novelda.jpg|The Sanctuary of Santa María Magdalena in Novelda, Spain
