One picture in much higher resolution

--- a/Sevilla.mw
+++ b/Sevilla.mw
@@ -50,7 +50,7 @@ Image:SevillaPuenteTrianaNoche.jpg|Night view of Bridge of Triana from Betis Str
 Image:SevillaExpo29.jpg|1929 Exposition Building, the [[Plaza de España (Seville)|Plaza de España]]
 Image:Sevilla2005Julio 050.jpg|Seville [[AVE]] Railway Station
 Image:Calatrava Puente del Alamillo Seville.jpg [[Puente del Alamillo|Alamillo Bridge]], designed by [[Santiago Calatrava]]
-Image:SevillaGiralda.jpg|The Giralda Tower
+Image:Spain Andalusia Seville BW 2015-10-23 13-04-37.jpg|The Giralda Tower
 Image:Sevilla Street.jpg|Typical Sevilla street in Old Quarters
 Image:OrangeTree.jpg|One of the many orange trees that line Seville's roads
 Image:CanosCarmona3.JPG|"Caños de Carmona", old [[Roman Empire|Roman]] [[Aqueduct]]
