One picture in much higher resolution

--- a/Seville.mw
+++ b/Seville.mw
@@ -55,7 +55,7 @@ Image:EspanaNight.jpg|Mayayakit ustung bengi keng [[Plaza de España (Seville)|P
 Image:SevillaExpo29.jpg|1929 Exposition Building, ing [[Plaza de España (Seville)|Plaza de España]]
 Image:Sevilla2005Julio 050.jpg|Seville [[AVE]] Tren stasiun
 Image:Calatrava Puente del Alamillo Seville.jpg [[Puente del Alamillo|Alamillo Bridge]], kinrokis neng [[Santiago Calatrava]]
-Image:SevillaGiralda.jpg|Ing Giralda Torri
+Image:Spain Andalusia Seville BW 2015-10-23 13-04-37.jpg|Ing Giralda Torri
 Image:Sevilla Street.jpg|Matuang tuknangan
 Image:CanosCarmona3.JPG|"Caños de Carmona", matuang [[Roman Empire|Roman]] [[Aqueduct]]
 Image:Sevilla Plaza de toros.JPG|Seville [[Plaza de toros de la Real Maestranza de Caballería de Sevilla|Maestranza de Caballería]] [[bullring]]
