Removing "Liquid_Oxygen.gif", it has been deleted from Commons by [[commons:User:JuTa|JuTa]] because: [[:c:COM:OTRS|No permission]] since 31 January 2016.

--- a/Template:Infobox_oxygen.mw
+++ b/Template:Infobox_oxygen.mw
@@ -13,7 +13,7 @@
 |block=p
 |series color=
 |phase color=
-|appearance= [[Image:Liquid Oxygen.gif|55px|left]]<br />Liquid Oxygen
+|appearance=<br />Liquid Oxygen
 |image name=
 |image size=
 |image name comment=
