Updated the pronunciation audio link for Guangzhou to one by native speaker

--- a/Guangzhou.mw
+++ b/Guangzhou.mw
@@ -76,9 +76,9 @@
 |t=廣州
 |l=Wide State or Capital of Guangfu
 |showflag=jyp
-|p=Guǎngzhōu
+|p=Guǎngzhōu<br />{{Audio|Guangzhou pronunciation.ogg|[Listen]}}
 |mi={{IPA-cmn|kwɑ̀ŋʈʂóʊ̯}}
-|w=Kuang<sup>3</sup>-chou<sup>1</sup><br />{{Audio|zh-Guangzhou.ogg|[Listen]}}
+|w=Kuang<sup>3</sup>-chou<sup>1</sup>
 |j=Gwong² zau<sup>1</sup>
 |ci={{IPA-yue|kʷɔ̌ːŋtsɐ̂u}}
 |y=Gwóngjàu
