--- a/Beroun.mw
+++ b/Beroun.mw
@@ -8,7 +8,7 @@
 | nickname                    = 
 <!-- *** Image *** -->
 | image                       = Beroun CZ main square 01.JPG
-| image_size                  =
+| image_size                  = 
 | image_caption               = Main square
 <!-- *** Symbols *** -->
 | flag                        = Vlajka_města_Beroun.svg
@@ -44,7 +44,7 @@
 <!-- *** Government *** -->
 | established_type            = 
 | established                 = 
-| mayor                       = 
+| mayor                       = Ivan Kůs
 <!-- *** Various codes *** -->
 | timezone           = [[Central European Time|CET]]
 | utc_offset         = +1
