*Empty MediaWiki Message*

--- a/Scrotum.mw
+++ b/Scrotum.mw
@@ -1,4 +1,4 @@
-Itang '''saku'' o '''suput a balat''' ('''eskrotu''') nung nokarin makapalub la ding [[bayag]] na ning [[lalaki]]ng mamalya.
+Itang '''saku''' o '''suput a balat''' ('''eskrotu''') nung nokarin makapalub la ding [[bayag]] na ning [[lalaki]]ng mamalya.
 
 
 {{Suli}}
