--- a/Kamatis.mw
+++ b/Kamatis.mw
@@ -47,7 +47,7 @@
 
 == Notes ==
 * Smith, A. F. (1994). ''The Tomato in America''. [[University of Illinois Press]]. ISBN 0-252-07009-7.
-* Peralta, I. E. & Spooner, D. M. (2001). Ann Granule-bound starch synthase (Gbssi) gene phylogeny of wild tomatoes (''Solanum'' L. section ''Lycopersicon'' [Mill.] Wettst. Subsection ''Lycopersicon''). ''American Journal of Botany'' 88 (10): 1888–1902 (available [http://www.amjbot.org/cgi/reprint/88/10/1888 online]).
+* Peralta, I. E. & Spooner, D. M. (2001). Granule-bound starch synthase (Gbssi) gene phylogeny of wild tomatoes (''Solanum'' L. section ''Lycopersicon'' [Mill.] Wettst. Subsection ''Lycopersicon''). ''American Journal of Botany'' 88 (10): 1888–1902 (available [http://www.amjbot.org/cgi/reprint/88/10/1888 online]).
 
 == Dalerayan ==
 <references/>6. ^http://www.fresh-vegetables.eu
