--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -58,9 +58,9 @@ Ing Founder apin I [https://commons.wikimedia.org/wiki/File:Jetlee_Yusi_Tiongco.
 *[https://instagram.com/kkpkintlofficial/ @kkpkintlofficial] queng [[Instagram]]
 *[http://kkpkintl.zyro.com/ Kapampangan Ku Pagmaragul Ku (KKPK) International Inc. Official Website]
 *[http://archive.sunstar.com.ph/pampanga/local-news/2015/01/21/kapampangan-facebook-group-host-social-service-program-387861 Kapampangan Facebook group to host social service program. By Ian Ocampo Flora of Sunstar Pampanga]
-*[http://kkpkintl.zyro.com/KKPK-Mission-Projs/ KKPK Mission Project]
+*[http://kkpkintl.zyro.com/Mission-Projs/ KKPK Mission Project]
 *[https://www.facebook.com/video.php?v=872892582798116&comment_id=873111146109593&offset=0&total_comments=2&comment_tracking=%7B%22tn%22%3A%22R%22%7D KKPK Distribution of Vegetable Seedlings, Feeding Program & Gift Giving (TV Patrol Pampanga)]
-*[http://kkpkintl.zyro.com/KKPK-Mission-Projs/ KKPK Environmental Program]
+*[http://kkpkintl.zyro.com/Environmental-Program/ KKPK Environmental Program]
 *[http://www.youtube.com/watch?v=E0JTTBuWlu4 KKPK queng TV Patrol Pampanga]
 *[http://siuala.com/aguman-sulat-kapampangan/ Siuálâ ding Meángûbié on Kulitan]
 *[http://usappampanga.com/forum/viewtopic.php?t=5 USAP Pampanga Forum]
