--- a/Michael_Pangilinan.mw
+++ b/Michael_Pangilinan.mw
@@ -1,6 +1,7 @@
 I '''Michael Pangilinan''' metung yang talakanta king [[Pilipinas]].
 
 ==Suglung Palwal==
+* {{imdb|5158787}}
 * [http://www.facebook.com/MichaelPangilinanOfficialFanpage Michael Pangilinan] king [[Facebook]]
 * [http://twitter.com/khelpangilinan Michael Pangilinan] king [[Twitter]]
 * [http://instagram.com/khelpangilinan Michael Pangilinan] king [[Instagram]]
