Removing "Central_Philippine_University_Gymnasium_5.jpg", it has been deleted from Commons by [[commons:User:Jameslwoodward|Jameslwoodward]] because: Per [[:c:Commons:Deletion requests/Files uploaded by Rockefellera22ount|]].

--- a/Central_Philippine_University.mw
+++ b/Central_Philippine_University.mw
@@ -29,7 +29,7 @@ Image:Loreto_D_Tupaz_Hall.jpg|Loreto D. Tupaz Hall of the College of Nursing and
 Image:Engineering_Building.JPG|Engineering Building.
 Image:Central_Philippine_University_Library_-_Henry_Luce_III_Library_(Main_Library).jpg|The Henry Luce III Library, the main library of Central Philippine University Library System.
 Image:CPU Wall of Remembrance.JPG|Wall of Remembrance.
-Image:Central_Philippine_University_Gymnasium_5.jpg|Central Philippine University Gymnasium .
+|Central Philippine University Gymnasium .
 Image:Dr. Alfonso A. Uy - Student Union Building.JPG|Dr. Alfonso A. Uy - Building (''food court''/''mini mall'').
 </gallery>
 
