Removing "Rose_Memorial_Auditorium.jpg", it has been deleted from Commons by [[commons:User:Jameslwoodward|Jameslwoodward]] because: Per [[:c:Commons:Deletion requests/Files uploaded by Rockefellera22ount|]].

--- a/Central_Philippine_University.mw
+++ b/Central_Philippine_University.mw
@@ -23,7 +23,7 @@ Ing '''Central Philippine University''' metung yang institucion ning matas a pip
 ==Campus==
 <gallery>
 Image:Central Philippine University Church in Iloilo City, Western Visayas.jpg|Central Philippine University Church.
-Image:Rose_Memorial_Auditorium.jpg|Rose Memorial Auditorium.
+|Rose Memorial Auditorium.
 Image:(Central_Philippine_University)_-_New_Valentine_Building.jpg|New Valentine Building of the College of Business and Accountancy.
 |Loreto D. Tupaz Hall of the College of Nursing and Allied Health Sciences
 Image:Engineering_Building.JPG|Engineering Building.
