--- a/Tala_da_reng_bangsa_agpang_king_kontinenti.mw
+++ b/Tala_da_reng_bangsa_agpang_king_kontinenti.mw
@@ -1,5 +1,5 @@
-This is a '''list of the [[country|countries]] of the [[world]] by [[continent]]''', displayed with their respective [[national flag]]s and [[capital]]s. The list contains:
-* [[List of sovereign states|Sovereign states]] (country names in '''bold'''), consisting of:
+Ini ing '''tala da reng [[bangsa]] na ning [[yatu]] agpang king [[kontinenti]]''', ampo ring [[pambangsang bandila]] at [[tungku]]. Ing talang ni atin yang:
+* [[List of sovereign states|Sovereign states]] (maka-'''bold''' la reng lagyu da reng bangsa), consisting of:
 ** The [[United Nations member states|member states]] of the [[United Nations]] (UN).
 ** A UN-recognized non-member state: [[Vatican City]].
 ** A state not recognized by the UN and most of its members, but currently with ''de facto'' international relations with most countries: the [[Republic of China]].
@@ -9,7 +9,7 @@ However, this list does not contain [[List of unrecognized countries|''de facto'
 
 For a detailed discussion of how the world is divided into continents, see the article ''[[Continent]]''.
 
-In this list, countries are classified according to the United Nations Statistics Division [http://unstats.un.org/unsd/methods/m49/m49regin.htm]. 
+King talang ini, maka-klasipika la reng bangsa agpang king United Nations Statistics Division [http://unstats.un.org/unsd/methods/m49/m49regin.htm]. 
 Some countries are considered ''[[transcontinental country|transcontinental]]'', using either purely geographical or political and historical criteria. For other proposed divisions of countries into continents, see the section ''[[#Other definitions of continents|Other definitions of continents]]''.
 
 ==[[Africa]]==
@@ -180,7 +180,7 @@ Some countries are considered ''[[transcontinental country|transcontinental]]'',
 * '''{{flag|Vatican City|size=50px}}''' – Vatican City ([[city-state]])
 
 ==[[Americas|America]]==
-===[[North America]]===
+===[[Pangulung Amerika]]===
 * ''{{flag|Anguilla|size=50px}}'' ([[British overseas territory|overseas territory of the United Kingdom]]) – [[The Valley, Anguilla|The Valley]]
 * '''{{flag|Antigua and Barbuda|size=50px}}''' – [[Saint John's, Antigua and Barbuda|Saint John's]]
 * ''{{flag|Aruba|size=50px}}'' (overseas country in the [[Kingdom of the Netherlands]]) – [[Oranjestad, Aruba|Oranjestad]]
@@ -223,7 +223,7 @@ Some countries are considered ''[[transcontinental country|transcontinental]]'',
 * '''{{flag|United States|size=50px}}''' – [[Washington, D.C.]]
 * ''{{flag|United States Virgin Islands|size=50px}}'' ([[insular area|overseas territory of the United States]]) – [[Charlotte Amalie]]
 
-===[[South America]]===
+===[[Mauling Amerika]]===
 * '''{{flag|Argentina|size=50px}}''' – [[Buenos Aires]]
 * '''{{flag|Bolivia|size=50px}}''' – [[Sucre]] (seat of government at [[La Paz]])
 * '''{{flag|Brazil|size=50px}}''' – [[Brasília]]
@@ -287,7 +287,7 @@ Antarctica, including all [[Antarctic territorial claims|territorial claims]] by
 ==Other definitions of continents==
 ''This section lists the proposed divisions of countries into continents that differ from the UN definition as stated above.''
 
-===Political divisions===
+===Dibisyon Politikal===
 ''This section lists countries that can be classified into another continent using political and historical criteria.''
 
 ====Politically European countries====
@@ -299,7 +299,7 @@ The [[overseas department|overseas departments of France]], i.e., '''[[French Gu
 
 Note that '''[[Russia]]''' is generally considered a European country more than an Asian country, since most of its population and its capital city are in Europe, and it has close political and historical ties with Europe, even though most of its territory is in Asia. Among the [[federal districts of Russia]], four are in Europe ([[Central Federal District|Central]], [[Southern Federal District|Southern]], [[Northwestern Federal District|Northwestern]] and [[Volga Federal District|Volga]]), while three are in Asia ([[Far Eastern Federal District|Far Eastern]], [[Siberian Federal District|Siberian]] and [[Urals Federal District|Urals]]).
 
-====Miscellaneous====
+====Deng aliwa pa====
 The following countries are sometimes considered parts of another continent since they have close political or historical ties with another country in that continent, and their territories are in the vicinity of that continent:
 *'''[[British Indian Ocean Territory]]''': Africa (instead of Asia, since it was historically part of [[Mauritius]]).
 *'''[[Christmas Island]]''': Oceania (instead of Asia, since it is a dependent territory of [[Australia]]).
@@ -307,10 +307,10 @@ The following countries are sometimes considered parts of another continent sinc
 *'''[[Greenland]]''': Europe (instead of North America, since it is a dependent territory of [[Denmark]]).
 *'''[[South Georgia and the South Sandwich Islands]]''': South America (instead of sub-Antarctic territory, since it is administered from the [[Falkland Islands]]).
 
-===Geographical divisions===
+===Dibisyon Heograpiku===
 ''This section lists the divisions of countries into continents using purely geographical criteria.''
 
-====Boundaries of Africa====
+====Deng angganan ning Aprika====
 ''For a detailed description of the geographical boundaries of Africa, [[Transcontinental country#Africa|see here]].''
 
 =====Suez Canal=====
@@ -329,11 +329,11 @@ Considering the [[continental shelf]] of [[Africa]], the following changes from 
 ====Boundaries between Asia and Europe====
 ''For a detailed description of the geographical boundaries between Asia and Europe, [[Transcontinental country#Europe and Asia|see here]].''
 
-=====Sea of Marmara and Turkish Straits=====
+=====Dayat Marmara ampo Turkish Straits=====
 Considering the [[Sea of Marmara]] and the [[Turkish Straits]] (the [[Bosporus]] and the [[Dardanelles]]) as a boundary between [[Asia]] and [[Europe]], the following change from the UN definition occurs:
 *'''[[Turkey]]''': Asia, east and south of Sea of Marmara and the Turkish Straits; to the west and north, Europe.
 
-=====Ural definitions=====
+=====Deng depinisyon ning Ural=====
 Considering the Ural definition that follows the [[water divide|watershed]] of the [[Ural Mountains]], and then the [[Ural River]] until the [[Caspian Sea]], as a boundary between [[Asia]] and [[Europe]], the following changes from the UN definition occur:
 *'''[[Kazakhstan]]''': Asia, east of the Ural River; to the west, Europe.
 *'''[[Russia]]''': Europe, west and north of the Ural Mountains watershed and the Ural River; to the east and south, Asia.
@@ -342,7 +342,7 @@ Considering the Ural definition that follows the [[water divide|watershed]] of t
 *'''[[Kazakhstan]]''': Asia, east of the Or River and the Emba River; to the west, Europe.
 *'''[[Russia]]''': Europe, west of the Ural Mountains watershed and the Ural River (until it reaches Kazakhstan's border for the first time); to the east, Asia.
 
-=====Caucasus definitions=====
+=====Deng depinisyon ning Caucasus=====
 Considering the [[Caucasus]] definition that follows the [[water divide|watershed]] of the [[Greater Caucasus]] of the [[Caucasus Mountains]] as a boundary between [[Asia]] and [[Europe]], the following changes from the UN definition occur:
 *'''[[Azerbaijan]]''': Asia, south of the Greater Caucasus watershed; to the north, Europe (very small area).
 *'''[[Georgia (country)|Georgia]]''': Asia, south of the Greater Caucasus watershed; to the north, Europe (very small area).
@@ -392,7 +392,7 @@ Considering the [[continental shelf]]s of [[North America|North]] and [[South Am
 *'''[[Trinidad and Tobago]]''': South America.
 *'''[[Venezuela]]''': South America; [[Isla Aves]] in North America.
 
-====Boundaries of Oceania====
+====Deng Angganan ning Oceania====
 ''For a detailed description of the geographical boundaries of Oceania, [[Transcontinental country#Asia and Oceania|see here]].''
 
 =====Asia-Australasia divisions=====
@@ -412,13 +412,13 @@ Though very rare, considering the [[Malay Archipelago]] as being part of [[Ocean
 *'''[[Singapore]]''': Oceania.
 *'''[[East Timor|Timor-Leste]]''': Oceania.
 
-=====Pacific Islands=====
+=====Kapuluang Pasipiku=====
 Considering all [[Pacific Islands]] as being part of [[Oceania]], the following changes from the UN definition occur:
 *'''[[Chile]]''': South America; [[Easter Island]] and [[Sala y Gómez]] in Oceania.
 *'''[[Japan]]''': Asia; Bird Islands ([[Okinotorishima]] and [[Minami Torishima|Minamitorishima]]) in Oceania.
 *'''[[United States]]''': North America; [[Hawaii]] in Oceania.
 
-====Boundaries of Antarctica====
+====Deng Angganan ning Antarctica====
 ''For a detailed description of the geographical boundaries of Antarctica, [[Transcontinental country#Antarctica|see here]].''
 
 =====Sub-Antarctic islands=====
@@ -427,7 +427,7 @@ Considering [[List of Antarctic and sub-Antarctic islands|sub-Antarctic islands]
 *'''[[New Zealand]]''': Oceania; [[New Zealand Sub-Antarctic Islands]] ([[Antipodes Islands]], [[Auckland Islands]], [[Bounty Islands]], [[Campbell Island group|Campbell Islands]] and [[The Snares|Snares Islands]]), sub-Antarctic territory.
 *'''[[South Africa]]''': Africa; [[Prince Edward Islands]], sub-Antarctic territory.
 
-==See also==
+==Lawen ya murin==
 ===Definition of continents===
 * [[Continent]]
 * [[Continental shelf]]
@@ -441,13 +441,13 @@ Considering [[List of Antarctic and sub-Antarctic islands|sub-Antarctic islands]
 ** [[Geography of Oceania|Oceania]]
 ** [[Geography of Antarctica|Antarctica]]
 
-===List of countries===
+===Tala da reng bangsa===
 * [[List of countries by continent (data file)]] - this data in a plain text format suitable for automated processing
 * [[List of countries]] (in alphabetical order)
 * [[List of countries and capitals in native languages]]
 * [[List of national capitals]] (in alphabetical order)
-* [[List of capitals by country]]
-* Tables of countries and territories (with area, population, population density, and capital) in each continent:
+* [[Tala da reng tungku agpang king bangsa]]
+* Talaan da reng bangsa ampong teritoryu (with area, population, population density, and capital) king bawat kontinenti:
 ** [[Africa#Territories and regions|Africa]]
 ** [[Asia#Territories and regions|Asia]]
 ** [[Europe#Territories and regions|Europe]]
@@ -455,7 +455,7 @@ Considering [[List of Antarctic and sub-Antarctic islands|sub-Antarctic islands]
 ** [[South America#Territories|South America]]
 ** [[Oceania#Territories and regions|Oceania]]
 
-==External links==
+==Kasusug Kilwal==
 * https://www.cia.gov/library/publications/the-world-factbook/index.html
 * http://www.state.gov/r/pa/ei/bgn/
 * http://archive.is/20121204142112/http://www.world-gazetteer.com/
