*Empty MediaWiki Message*

--- a/Centre-Val_de_Loire.mw
+++ b/Centre-Val_de_Loire.mw
@@ -46,6 +46,6 @@ Ing '''Centre''' metung ya kareng 26 a [[regions of France|labuad]] ning [[Franc
 
 {{coor title dm|47|30|N|1|45|E|region:FR_type:adm1st_source:GNS-enwiki}}
 
-[[Category:Centre|*]]
+[[Category:Centre-Val de Loire|*]]
 [[Category:Ding Labuad ning France]]
 [[Category:NUTS 2 statistical regions of the European Union]]
