*Empty MediaWiki Message*

--- a/Centre-Val_de_Loire.mw
+++ b/Centre-Val_de_Loire.mw
@@ -1,6 +1,6 @@
 {{Infobox French region |
 native_name              = Labuad Centre |
-common_name              = Centre |
+common_name              = Centre-Val de Loire |
 image_flag               =|
 image_logo               =|
 image_logo_size          = 150px|
@@ -21,7 +21,7 @@ departments               = [[Cher (department)|Cher]]<br />[[Eure-et-Loir]]<br 
 image_map                = Centre-Val de Loire map.png |
 footnotes=|
 |}}
-Ing '''Centre''' metung ya kareng 26 a [[regions of France|labuad]] ning [[France]], atiu papunta king pangulungalbugan ning kalibudatan ning bangsa. Ing kayang tungku iyapin ing [[Orléans]], agiang ing peka maragul a lakanbalen ing [[Tours]].
+Ing '''Centre-Val de Loire''' metung ya kareng 26 a [[regions of France|labuad]] ning [[France]], atiu papunta king pangulungalbugan ning kalibudatan ning bangsa. Ing kayang tungku iyapin ing [[Orléans]], agiang ing peka maragul a lakanbalen ing [[Tours]].
 
 == Pun communidad ==
 * [[Blois]]
@@ -41,7 +41,7 @@ Ing '''Centre''' metung ya kareng 26 a [[regions of France|labuad]] ning [[Franc
 == Suglung Palwal ==
 * [http://www.regioncentre.fr/ Région Centre] Official website
 
-{{Prefectures of Centre}}
+{{Prefectures of Centre-Val de Loire}}
 {{Regions of France}}
 
 {{coor title dm|47|30|N|1|45|E|region:FR_type:adm1st_source:GNS-enwiki}}
