*Empty MediaWiki Message*

--- a/Kapampangan_(amanu).mw
+++ b/Kapampangan_(amanu).mw
@@ -1,10 +1,9 @@
 {{Infobox language
 |name=Kapampangan
 |altname=Pampango
-|nativename=''Amánung Sísuan''
-|nativename = ''Amánung Sísuan''<br />[[File:Amanung Sisuan.svg|120x60px]]
+|nativename=''Amánung Sísuan''<br />[[File:Amanung Sisuan.svg|120x60px]]
 |pronunciation = {{IPA-xx|ˌkapamˈpaŋan|}}
-|states=[[Philippines]]
+|states=[[Pilipinas]]
 |region=[[Central Luzon]]
 |ethnicity=[[Kapampangan people]]
 |speakers=1.9 million
@@ -12,11 +11,12 @@
 |ref=e17
 |speakers2=6th most-spoken native language in the Philippines<ref>Philippine Census, 2000. Table 11. Household Population by Ethnicity, Sex and Region: 2000</ref>
 |familycolor=Austronesian
-|fam2=[[Malayo-Polynesian languages|Malayo-Polynesian]]
-|fam3=[[Philippine languages|Philippine]]
-|fam4=[[Northern Philippine languages|Northern Philippine]]
-|fam5=[[Central Luzon languages|Central Luzon]] 
-|script=[[Latin script|Latin]] ([[Abakada|Kapampangan]] or [[Spanish alphabet]]);<br>Historically written in: ''[[Kulitan alphabet|Kulitan(also known as Matuang Kudlitan, Pamagkulit or Súlat Kapampángan)]]''
+|fam1=[[Deng amanung Awstronesyu|Awstronesyu]]
+|fam2=[[Malayo-Polynesian languages|Malayo-Polinesyu]]
+|fam3=[[Philippine languages|Pilipinu]]
+|fam4=[[Northern Philippine languages|Pangulung Pilipinu]]
+|fam5=[[Central Luzon languages|Kalibudtarang Luzon]] 
+|script=[[Latin script|Latin]] ([[Abakada|Kapampangan]] or [[Spanish alphabet]]);<br>Makasulat ya kanita king: ''[[Kulitan alphabet|Kulitan (kebaluan ya murin anti mung Matuang Kudlitan, Pamagkulit o Súlat Kapampángan)]]''
 |Dialects
 |dia1=[[Pampanga]]
 |dia2=[[Tarlac]]
