/* Lista nereng kanta */

--- a/ID;_Peace_B.mw
+++ b/ID;_Peace_B.mw
@@ -17,7 +17,7 @@
 
 Ing '''''ID; Peace B'''''  ing debut album nang [[BoA]] king [[amanung Koreano]].
 
-== Lista nereng kanta ==
+== Lista da reng kanta ==
 {|class="wikitable"
 ! '''#'''
 ! Lagyu ning awit
