--- a/Template:Country_data_South_Korea.mw
+++ b/Template:Country_data_South_Korea.mw
@@ -1,14 +1,1 @@
-{{ {{{1<noinclude>|country showdata</noinclude>}}}
-| alias           = Mauling Korea
-| templatename    = South Korea
-| flag alias      = Flag of South Korea.svg
-| flag alias-unification = Unification flag of Korea.svg{{!}}border
-| countryname = {{{countryname|South Korea<!-- MUST MATCH SUFFIX OF PAGENAME!! -->}}}
-| size = {{{size|}}}
-| name = {{{name|}}}
-| sport = {{{sport|}}}
-| variant = {{{variant|}}}
-}}<noinclude>
-==Variants==
-* <nowiki>{{flag|South Korea|unification}}</nowiki> = {{flag|South Korea|unification}}
-</noinclude>
+#REDIRECT [[Template:Country data Mauling Korea]]
