--- a/Template:KOR.mw
+++ b/Template:KOR.mw
@@ -1,3 +1,3 @@
-{{flag|Mauling Korea}}<noinclude>
+{{flag|South Korea}}<noinclude>
 {{flag template documentation|South Korea|KOR|KOR|KOR}}
 </noinclude>
