*Empty MediaWiki Message*

--- a/Template:Country_data_Pangulung_Korea.mw
+++ b/Template:Country_data_Pangulung_Korea.mw
@@ -1,6 +1,6 @@
 {{ {{{1<noinclude>|country showdata</noinclude>}}}
-| alias           = North Korea
-| shortname alias = North Korea
+| alias           = Pangulung Korea
+| shortname alias = Pangulung Korea
 | flag alias      = Flag of North Korea.svg
 | flag alias-unification = Unification flag of Korea.svg{{!}}border
 | countryname = {{{countryname|North Korea<!-- MUST MATCH SUFFIX OF PAGENAME!! -->}}}
