*Empty MediaWiki Message*

--- a/Template:Country_data_China.mw
+++ b/Template:Country_data_China.mw
@@ -1,6 +1,6 @@
 {{ {{{1<noinclude>|country showdata</noinclude>}}}
-| alias           = People's Republic of China
-| shortname alias = China
+| alias           = Pangmaldang Republika ning Tsina
+| shortname alias = Tsina
 | flag alias      = Flag of the People's Republic of China.svg
 | flag alias-qing = China Qing Dynasty Flag 1889.svg
 | countryname = {{{countryname|China<!-- MUST MATCH SUFFIX OF PAGENAME!! -->}}}
