--- a/Template:Country_data_Pangmaldang_Republika_ning_Tsina.mw
+++ b/Template:Country_data_Pangmaldang_Republika_ning_Tsina.mw
@@ -1,3 +1,3 @@
-#REDIRECT [[Template:Country data China]]
-[[Category:Country data redirects|Ch#REDIRECT [[Template:Country data China]]
+#REDIRECT [[Template:Country data Tsina]]
+[[Category:Country data redirects|Ch#REDIRECT [[Template:Country data Tsina]]
 [[Category:Country data redirects|China peoples republic]]ina peoples republic]]
