*Empty MediaWiki Message*

--- a/Template:Country_data_Pangmaldang_Republika_ning_Tsina.mw
+++ b/Template:Country_data_Pangmaldang_Republika_ning_Tsina.mw
@@ -1,3 +1,2 @@
 #REDIRECT [[Template:Country data Tsina]]
-[[Category:Country data redirects|Ch#REDIRECT [[Template:Country data Tsina]]
-[[Category:Country data redirects|China peoples republic]]ina peoples republic]]
+[[Category:Country data redirects|China peoples republic]]
