--- a/Amanung_Koreanu.mw
+++ b/Amanung_Koreanu.mw
@@ -3,7 +3,7 @@
 |nativename = <!-- Hangul (한글) --><!-- in S. Korea -->{{lang |ko-KR|[[wikt:한국어|한국어]] (韓國語)}} / <!-- in N. Korea -->{{lang|ko-KP|조선말 (朝鮮말)}} <br><!-- Romanization -->''Hanguk-eo, Chosŏnmal''
 |image = Hangugeo-Chosonmal.png
 |imagesize = 170px
-|imagecaption = Adwang lagyu para king Koreanu, ''Hanguk-eo'' at ''Chosŏnmal'', [[Horizontal and vertical writing in East Asian scripts|written vertically]] king [[Hangul]]
+|imagecaption = Adwang lagyu para king Koreanu, ''Hangugeo'' at ''Chosŏnmal'', pabertikal ya makakudlit king ''[[Hangul]]'' (''Chosŏngul'')
 |states=[[Peninsula Koreanu]]
 |speakers = alus 80 milyon
 |date     = 2008–2012
